kubernetes/talos/deploy/streamystats/deployment_jobserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamystats-jobserver
spec:
  selector:
    matchLabels:
      app: streamystats-jobserver
      release: streamystats-jobserver
  template:
    metadata:
      labels:
        app: streamystats-jobserver
        release: streamystats-jobserver
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:

        - image: ghcr.io/fredrikburmester/streamystats-job-server:v2.20.0
          imagePullPolicy: IfNotPresent
          name: streamystats-jobserver

          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          readinessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3005
              path: /health
          livenessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3005
              path: /health

          ports:
            - containerPort: 3005
              name: http
              protocol: TCP
