kubernetes/talos/deploy/streamystats/deployment_nextjs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamystats-nextjs
spec:
  selector:
    matchLabels:
      app: streamystats-nextjs
      release: streamystats-nextjs
  template:
    metadata:
      labels:
        app: streamystats-nextjs
        release: streamystats-nextjs
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:

        - image: ghcr.io/fredrikburmester/streamystats-nextjs:v2.20.0
          imagePullPolicy: IfNotPresent
          name: streamystats-nextjs

          securityContext:
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault

          volumeMounts:
            - name: nextjs-cache
              mountPath: /app/apps/nextjs-app/.next/cache

          ports:
            - containerPort: 3000
              name: http
              protocol: TCP

          readinessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 0
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3000
              path: /
          livenessProbe:
            failureThreshold: 6
            successThreshold: 1
            initialDelaySeconds: 30
            timeoutSeconds: 3
            periodSeconds: 10
            httpGet:
              scheme: HTTP
              port: 3000
              path: /

      volumes:
        - name: nextjs-cache
          emptyDir: {}
