kubernetes/talos/deploy/streamystats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamystats
spec:
  ingressClassName: internal
  rules:
    - host: streamystats.vandeneede.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamystats-nextjs
                port:
                  name: http
